# interview-lg-isitfriday

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  exercice.md  pyproject.toml
src/: main.py
