[tool.poetry]
name = "interview-test-project"
version = "0.1.0"
description = ""
authors = ["Benjamin Debotte <benjamin.debotte@gmail.com>"]
readme = "README.md"
packages = [{include = "interview_test_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pytest = "^7.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.244"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
